<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>motech-contrib</name>
    <artifactId>motech-contrib</artifactId>
    <groupId>org.motechproject.whp-contrib</groupId>
    <version>0.14</version>

    <packaging>pom</packaging>

    <properties>
        <motech.version>0.12.3-whp</motech.version>
        <motech.contrib.group>org.motechproject.whp-contrib</motech.contrib.group>
        <spring-security.version>3.1.0.RELEASE</spring-security.version>
        <spring.version>3.1.0.RELEASE</spring.version>
        <spring.integration.version>2.1.1.RELEASE</spring.integration.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <build.dir>../build</build.dir>
    </properties>

    <modules>
        <module>case-integration</module>
        <module>commcare-api</module>
        <module>commcare-listener</module>
        <module>motech-http-client</module>
        <module>motech-web-security</module>
        <module>motech-validation</module>
        <module>motech-bulk-export-import</module>
        <module>motech-diagnostics</module>
        <module>motech-retry</module>
        <module>motech-flash-scope</module>
        <module>motech-ivr-kookoo-v1</module>
        <module>motech-web-utils</module>
        <module>motech-paginator</module>
        <module>motech-couchdb-lucene</module>
        <module>motech-diagnostics-web</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>case-common</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>case-log-browser</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>case-logger</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>case-parser</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>case-service</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>commcare-case-gateway</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>openrosa-registration-service</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>case-integration</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>commcare-api</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>commcare-listener</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-bulk-export-import</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-couchdb-lucene</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-diagnostics</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-diagnostics</artifactId>
                <type>test-jar</type>
                <scope>test</scope>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-diagnostics-web</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-flash-scope</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-http-client</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-ivr-kookoo-v1</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-paginator</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-retry</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-validation</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-web-security</artifactId>
                <version>0.14</version>
            </dependency>
            <dependency>
                <groupId>org.motechproject.whp-contrib</groupId>
                <artifactId>motech-web-utils</artifactId>
                <version>0.14</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <repository>
            <id>motech.nexus</id>
            <name>Motech Releases Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/releases</url>
            <uniqueVersion>false</uniqueVersion>
        </repository>
        <snapshotRepository>
            <id>motech.nexus</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>maven-central</id>
            <url>http://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>sonatype-repo</id>
            <url>https://repository.sonatype.org/content/groups/forge/</url>
        </repository>
        <repository>
            <id>motech.nexus.snapshots</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>motech.nexus.releases</id>
            <name>Motech Releases Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/releases</url>
        </repository>
        <repository>
            <id>motech-repo</id>
            <name>Motech Maven Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/public</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <preparationGoals>clean install</preparationGoals>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>-XX:MaxPermSize=1024M -ea</argLine>
                    <printSummary>true</printSummary>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <includes>
                        <include>**/*IT.java</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>verify</id>
                        <goals>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <scm>
        <connection>scm:git:https://github.com/motech/motech-contrib</connection>
        <developerConnection>scm:git:https://github.com/motech/motech-contrib</developerConnection>
        <url>https://github.com/motech/motech-contrib</url>
        <tag>motech-contrib-0.14</tag>
    </scm>
</project>
